--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 # Microsoft SQL Server configuration
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=tempdb;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=tempdb;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8
 
 spring.datasource.username = sa
 spring.datasource.password = YourStrong@Passw0rd
