setup for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=demo
-server.port=8081
+server.port=8080
 
 # Microsoft SQL Server configuration
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=tempdb;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=projectDB;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8
 
 spring.datasource.username = sa
-spring.datasource.password = YourStrong@Passw0rd
+#spring.datasource.password = YourStrong@Passw0rd   (use environment variable instead)
+spring.datasource.password=${MSSQL_SA_PASSWORD}
 
 # Enable SQL logging for debugging (optional)
 spring.jpa.show-sql=true
